[project]
name = "booklet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.195.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "pypdf>=6.10.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.0",
]
